--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.14.1",
     "@aws-amplify/backend-cli": "^1.4.11",
+    "@aws-cdk/aws-lambda": "^1.203.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.203.0",
+    "@aws-cdk/aws-sns": "^1.203.0",
+    "@aws-sdk/client-sns": "^3.772.0",
     "aws-cdk": "^2.1002.0",
     "aws-cdk-lib": "^2.181.1",
     "constructs": "^10.4.2",
