--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-cdk/aws-lambda-nodejs": "^1.203.0",
     "@aws-cdk/aws-sns": "^1.203.0",
     "@aws-sdk/client-sns": "^3.772.0",
+    "@types/node": "^22.13.10",
     "aws-cdk": "^2.1002.0",
     "aws-cdk-lib": "^2.181.1",
     "constructs": "^10.4.2",
