--- a/package.json
+++ b/package.json
@@ -17,17 +17,14 @@
     "@aws-cdk/aws-sns": "^1.203.0",
     "@aws-sdk/client-sns": "^3.772.0",
     "@types/node": "^22.13.10",
-    "aws-cdk-lib": "^2.189.0",
+    "aws-cdk": "^2.1002.0",
+    "aws-cdk-lib": "^2.181.1",
     "constructs": "^10.4.2",
     "esbuild": "^0.25.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "aws-amplify": "^6.13.3",
-    "aws-lambda": "^1.0.7",
-    "graphql": "^15.10.1",
-    "graphql-request": "^7.1.2",
-    "uuid": "^11.1.0"
+    "aws-amplify": "^6.13.3"
   }
 }
